Add @Serial annotation to serialVersionUID fields, introduced in Java 14